<resources>
    <string name="app_name">Chat App</string>
    <string name="title_chats">Chats</string>
    <string name="title_groups">Groups</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="user_image">User image</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="create_a_new_account">Create Account</string>
    <string name="display_name">Display name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="create">Create</string>
    <string name="or">OR</string>
    <string name="login_to_your_account">Login to PeachZy</string>
    <string name="add_friend">Add Friend</string>
    <string name="refuse_friend_request"> Refuse friend request</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="request_sent">Request sent</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="change_image">Change Image</string>
    <string name="logout">Logout</string>
    <string name="change_status">Change Status</string>
    <string name="create_an_account">Create an account</string>
    <string name="new_friend_request">New friend request</string>
    <string name="newUser">New user?</string>
    <string name="login">Login</string>
    <string name="welcome_to_quick_chat">Welcome to Quick Chat</string>
    <string name="login_or_create_an_account_to_get_started">Login or create an account to get started</string>
    <string name="chat_icon">Chat icon</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="VerifyOtp">Please Verify OTP</string>
    <string name="OTPFailed">Didnt receive OTP code?</string>
    <string name="Resend">Resend(1/3)</string>
    <string name="submit">Submit</string>
    <string name="returnSignIn">Return to Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_description">Please enter the email address associated with your account and We will send email you link to reset your password</string>
    <string name="get_started_with_peachzy">Get Started With Peachzy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sign_in">Sign In</string>
    <string name="search">Search</string>
    <string name="user_information">User Information</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="day_of_birth">Day of Birth</string>
    <string name="email_">Email</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="change_password_2">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="Renew_password">Renew password</string>
    <string name="add_friend_2">Add friend</string>
    <string name="request_received">Request received</string>
    <string name="request_sent_2">Request sent</string>
    <string name="nhap_tin_nhan">Enter message...</string>
    <string name="tao_nhom">Create group</string>
    <string name="nhap_ten_nhom">Enter group name...</string>
    <string name="huy">Cancel</string>
    <string name="tuy_chon">Options</string>
    <string name="them_thanh_vien">Add member</string>
    <string name="xoa_thanh_vien">Delete member</string>
    <string name="xoa_nhom">Delete group</string>
    <string name="roi_nhom">Leave group</string>
    <string name="manage_member">Manage member</string>
    <string name="list_member">List member</string>
    <string name="message">Message</string>
    <string name="group_message">Group message</string>
    <string name="change_profile">Change profile</string>
    <string name="edit_user_information">Edit user information</string>
    <string name="sign_out">Sign out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>