<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etFind"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgGrey"
        android:orientation="vertical"
        android:padding="40px"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/remove_bg_logo" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/forgot_your_password"
            android:textAlignment="center"
            android:textColor="@color/textColorBtn"
            android:textSize="28sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="50px"
            android:text="@string/forgot_password_description"
            android:textAlignment="center"
            android:textColor="#505861"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="50px"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/borderColor"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="50px"
            android:backgroundTint="@color/btnColor"
            android:text="@string/send"
            android:textColor="@color/textColorBtn"
            android:textStyle="bold"
            app:cornerRadius="10sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:backgroundTint="@color/bgGrey"
                android:text="@string/returnSignIn"
                android:textAlignment="center"
                android:textColor="@color/textColorBtn"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>