<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragments.Profiles.ChangePasswordFragment">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/btnColor"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/borderColor"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/borderColor"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/etReNewPassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/Renew_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/borderColor"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/btnColor"
            android:text="@string/change_password_2"
            android:textColor="@color/textColorBtn"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>