<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_profile_container">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-37dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/btnColor"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/user_information"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="131dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="135dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:src="@drawable/user_avatar"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/border_top"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="130dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:textSize="18dp"
                android:text="@string/name"
                android:textColor="@color/borderColor"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="130dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:textSize="18dp"
                android:text="@string/gender"
                android:textColor="@color/borderColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"

                android:ems="10"
                android:hint="@string/gender"
                android:inputType=""
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="130dp"
                android:layout_height="37dp"

                android:paddingLeft="20dp"
                android:text="@string/day_of_birth"
                android:textColor="@color/borderColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:hint="yyy-mm-dd"
                android:inputType="text"
                android:paddingTop="15dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:paddingTop="15dp">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="130dp"
                android:layout_height="37dp"
                android:paddingLeft="20dp"
                android:text="@string/email_"
                android:textColor="@color/borderColor"
                android:textSize="18dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnChangeProfile"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="-340dp"
                android:background="@drawable/my_ripple"
                android:backgroundTint="@color/white"
                android:src="@drawable/edit_25" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="-59dp"
                android:layout_marginBottom="4dp"
                android:paddingLeft="55dp"
                android:text="@string/change_profile"
                android:textColor="@color/black"
                android:textSize="19dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <ImageButton
                android:id="@+id/btnChangePassword"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="-340dp"
                android:src="@drawable/password_30_black"
                android:background="@drawable/my_ripple"/>
            <TextView
                android:id="@+id/text_view1"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="-59dp"
                android:layout_marginBottom="4dp"
                android:paddingLeft="55dp"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="19dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom">

            <ImageButton
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="-340dp"
                android:background="@drawable/my_ripple"
                android:backgroundTint="@color/white"

                android:src="@drawable/baseline_exit_to_app_30" />

            <TextView
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="-59dp"
                android:layout_marginBottom="4dp"
                android:paddingLeft="55dp"
                android:text="@string/sign_out"
                android:textColor="@color/black"
                android:textSize="19dp"/>
        </RelativeLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
